# stem-generation

./: .env.example  .gitignore  README.md  ai_stems_generated.csv  ai_stems_with_sims-all-MiniLM-L6-v2.csv  ai_stems_with_sims-all-mpnet-base-v2.csv  anchors.py  docker-compose.yml  generator.py  pyproject.toml  validator.py
backend/: Dockerfile
backend/app/: item_generator.py  main.py  models.py  validator.py
backend/app/data/: validated_stems.csv
data/: ai_stems_generated.csv  ai_stems_with_sims-all-MiniLM-L6-v2.csv  ai_stems_with_sims-all-mpnet-base-v2.csv
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/: StemGenerationForm.tsx  StemList.tsx  StemSimilarityVisualization.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/: cos_sims.ipynb  generator.py  validator.py
