[project]
name = "stem-gen-validation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.2.6",
    "openai>=1.92.2",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "ruff>=0.12.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
]
